3.5.0
Added vertical home menu layout.
New layout for the home menu and new widget management system.
Added option to stop playback on return to menu.
Added file manager to settings.
Added busy spinner for video caching.
New layout for topbars.
The skin now does not share the main menu with other skins.
Added "reboot to Android" option in quit menu.
Mute topbar icon switches to red when muted.
Added support for the plugin.program.autocompletion addon.
Added option to disable default startup logo.
Enhanced details in addon browser.
Added support for PlexKodiConnect context menu.
Removed custom sources dialog.
Added event log to settings.
Added Aspect ratio info in Dialog video info.
Updated support for script.extendedinfo.
Removed Artwork downloader from context menu.
Updated support for the script.skin.helper.service addon.
Added support for the script.skin.helper.backgrounds addon.
Added support for the script.skin.helper.colorpicker addon.
Added support for the script.skin.helper.skinbackup addon.
Updated languages.
Bugs fixed.

3.0.10
Added donation message.
Added toggles to skin settings.
Enhanced seek bar.
Added Lilac Theme.
Added support Recently added shows widget + Ratings and Runtime for PleXBMC widgets (only for Tgxcorporation's pleXBMC plugin).
Added support for PleXBMC fanart in shelf items (only for Tgxcorporation's pleXBMC plugin).
Added Recently viewed shows to Plex Home submenu.
Added scrollbar to Quit Dialog.
Moved Plex and Reload skin controls into Skin Settings.
Added options to reload skin.
New layout for video osd.
New layout for music osd.
Added Favourites to Quit Menu.
Added option to disable zoomed images as fanart in pictures.
New layout and navigation for vertical home menu.
Added support for image resources from Kodi repository: weather Icons, weather fanarts, studio logos, album labels logos.
Topbars enhancements. Added volume and window controls in Music and Video OSD.
Changed icon for visualisation settings in MusicOSD.