@@ -1,0 +1,169 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<window>
+    <defaultcontrol>3</defaultcontrol>
+    <controls>
+        <include>DimBG</include>
+        <control type="group">
+            <include>DialogOpenClose</include>
+            <control type="image">
+                <posx>0</posx>
+                <posy>140</posy>
+                <width>1920</width>
+                <height>1080</height>
+                <!--<include>DialogTransparency</include>-->
+                <colordiffuse>$VAR[Picked.Theme.Color]</colordiffuse>
+                <texture border="50">common/background_menu.png</texture>
+            </control>
+            <include content="WindowClosingButton">
+                <param name="id" value="9010"/>
+                <param name="x" value="1870"/>
+                <param name="y" value="140"/>
+                <param name="onleft" value="6060"/>
+            </include>
+            <control type="image">
+                <posx>530</posx>
+                <posy>190</posy>
+                <width>480</width>
+                <height>900</height>
+                <texture border="1">common/background_strip_horizontal_right.png</texture>
+            </control>
+            <control type="image">
+                <posx>1390</posx>
+                <posy>190</posy>
+                <width>480</width>
+                <height>900</height>
+                <texture border="1">common/background_strip_horizontal_right.png</texture>
+            </control>
+            <!-- SIDE MENU -->
+            <control type="group">
+                <posy>240</posy>
+                <control type="label">
+                    <posx>50</posx>
+                    <description>Controller profiles grouplist heading</description>
+                    <label>$LOCALIZE[35050]</label>
+                    <width>480</width>
+                    <include>LeftMenuTitleLabel</include>
+                </control>
+                <control type="grouplist" id="3">
+                    <description>Controller profiles grouplist</description>
+                    <posy>50</posy>
+                    <height>400</height>
+                    <onright>9060</onright>
+                    <ondown>9001</ondown>
+                    <include>DialogMenuButtonGroup</include>
+                </control>
+                <control type="button" id="10">
+                    <description>Default controller button</description>
+                    <include>DialogMenuButton</include>
+                </control>
+                <include content="DialogMenuScroller">
+                    <param name="y" value="0"/>
+                    <param name="height" value="400"/>
+                    <param name="onright" value="5"/>
+                    <param name="onleft" value="3"/>
+                </include>
+                <control type="grouplist" id="9001">
+                    <posx>TextMargin</posx>
+                    <posy>550</posy>
+                    <width>480</width>
+                    <height>250</height>
+                    <itemgap>0</itemgap>
+                    <aligny>bottom</aligny>
+                    <align>center</align>
+                    <orientation>vertical</orientation>
+                    <onup>3</onup>
+                    <ondown>9001</ondown>
+                    <onright>10</onright>
+                    <control type="button" id="18">
+                        <include>DialogMenuButton</include>
+                        <label>$LOCALIZE[186]</label>
+                    </control>
+                    <control type="button" id="19">
+                        <include>DialogMenuButton</include>
+                        <label>$LOCALIZE[10035]</label>
+                    </control>
+                    <control type="button" id="20">
+                        <include>DialogMenuButton</include>
+                        <label>$LOCALIZE[21452]</label>
+                    </control>
+                    <control type="button" id="17">
+                        <include>DialogMenuButton</include>
+                        <label>$LOCALIZE[10043]</label>
+                    </control>
+                    <control type="button" id="21">
+                        <include>DialogMenuButton</include>
+                        <label>$LOCALIZE[35013]</label>
+                    </control>
+                </control>
+            </control>
+            <control type="group">
+                <posx>530</posx>
+                <posy>240</posy>
+                <control type="label" id="2">
+                    <posx>TextMargin</posx>
+                    <posy>0</posy>
+                    <width>1240</width>
+                    <height>50</height>
+                    <font>InfoTitleFont</font>
+                    <include>TextColor_MainColor</include>
+                    <scroll>true</scroll>
+                    <label>$LOCALIZE[35058]</label>
+                </control>
+                <control type="gamecontroller" id="31">
+                    <posx>50</posx>
+                    <posy>100</posy>
+                    <width>750</width>
+                    <height>470</height>
+                </control>
+            </control>
+            <control type="group">
+                <posx>1390</posx>
+                <posy>240</posy>
+                <control type="label">
+                    <description>Feature list heading</description>
+                    <posx>TextMargin</posx>
+                    <label>$LOCALIZE[35059]</label>
+                    <width>480</width>
+                    <include>TextColor_MainColor</include>
+                    <font>InfoTitleFont</font>
+                </control>
+                <control type="grouplist" id="5">
+                    <description>Features grouplist</description>
+                    <posy>100</posy>
+                    <height>700</height>
+                    <width>480</width>
+                    <onleft>3</onleft>
+                    <onright>61</onright>
+                    <onup>5</onup>
+                    <ondown>5</ondown>
+                    <itemgap>0</itemgap>
+                    <pagecontrol>61</pagecontrol>
+                </control>
+                <control type="scrollbar" id="61">
+                    <right>50</right>
+                    <posy>100</posy>
+                    <height>700</height>
+                    <onleft>5</onleft>
+                    <onright>9001</onright>
+                    <include>VerticalScroller</include>
+                </control>
+                <control type="button" id="7">
+                    <description>Default feature button</description>
+                    <include>DialogMenuButton</include>
+                </control>
+                <control type="label" id="8">
+                    <description>Feature group title</description>
+                    <width>480</width>
+                    <include>LeftMenuTitleLabel</include>
+                </control>
+                <control type="image" id="9">
+                    <description>Feature separator image</description>
+                    <width>480</width>
+                    <height>1</height>
+                    <texture border="51,0,51,0">common/bg_facade_separator.png</texture>
+                </control>
+            </control>
+
+        </control>
+    </controls>
+</window>
