@@ -1,4 +1,5 @@
 3.5.0
+Added Game Controller support.
 Added vertical home menu layout.
 New layout for the home menu and new widget management system.
 Added option to stop playback on return to menu.
